test/good/good3.dj
//prints 4
main {
  nat x; 
  x=0; 
  x=x+1;
  x=x+1; 
  x=x+1;
  x=x+1; 
  printNat(5);
  printNat(x);
}

